Changed apache commons 64 bin to DatatypeConverter